# berm-detection

./: .gitignore  QGIS_Project.qgz  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  train_altarvalley.yaml
data/processed/labels_buffered/: altarvalley_longberms_snapped_buf10m.dbf  altarvalley_longberms_snapped_buf10m.shp  altarvalley_longberms_snapped_buf10m.shx  altarvalley_longberms_snapped_buf2m.dbf  altarvalley_longberms_snapped_buf2m.shp  altarvalley_longberms_snapped_buf2m.shx  altarvalley_structures_snapped_buf10m.dbf  altarvalley_structures_snapped_buf10m.shp  altarvalley_structures_snapped_buf10m.shx  altarvalley_structures_snapped_buf2m.dbf  altarvalley_structures_snapped_buf2m.shp  altarvalley_structures_snapped_buf2m.shx
data/raw/labels/: altarvalley_longberms.dbf  altarvalley_longberms.shp  altarvalley_longberms.shx  altarvalley_structures.dbf  altarvalley_structures.shp  altarvalley_structures.shx  bigchino_berms.dbf  bigchino_berms.shp  bigchino_berms.shx  bigchino_problems.dbf  bigchino_problems.shp  bigchino_problems.shx  brawleywash_pts.dbf  brawleywash_pts.shp  brawleywash_pts.shx  cochise_berms.dbf  cochise_berms.shp  cochise_berms.shx  riodelaconception_pts.dbf  riodelaconception_pts.shp  riodelaconception_pts.shx  (+9 more)
notebooks/: 01_dem_api_validation.ipynb  02_snap_labels_demo.ipynb
scripts/: buffer_labels.py  dem_urls.txt  download_dem.py  download_dem_api.py  prepare_labels.py  rasterize_labels.py  snap_labels_to_dem.py  train.py
src/data/: dataset.py
src/models/: unet.py
src/training/: losses.py  trainer.py
(+6 files in other folders)
