[project]
name = "berm-detection"
version = "0.1.0"
description = "Deep learning pipeline for automated berm and legacy earthwork detection"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.4",
    "requests>=2.34.2",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "shapely>=2.1.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
